--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.4.0-rc'
 }
@@ -8,13 +6,19 @@ version = '0.0.1'
 
 repositories {
     mavenCentral()
-    maven {
-        url 'https://dl.bintray.com/kotlin/kotlin-eap'
-    }
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
 }
 dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
 }
-tasks.withType(KotlinCompile) {
-    kotlinOptions.jvmTarget = '1.8'
+
+test {
+    useJUnitPlatform()
+}
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
