Add main.sh to run simple evaluator tests, small bodged cleanup

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    testLogging {
+        outputs.upToDateWhen {false}
+        showStandardStreams = true
+    }
 }
 
 compileKotlin {
